# dormitoryDigitalTwin

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schema.md
chat/: __init__.py  app.py  llm.py  validators.py
chat/agents/: __init__.py  executor.py  planner.py
chat/prompts/: __init__.py  influx.py  neo4j.py  planner.py
chat/tools/: __init__.py  influx_tool.py  neo4j_tool.py
db/: __init__.py  influx_client.py  neo4j_client.py
graph/: seed.py
timeseries/: generators.py  seed.py  visualize.py
